# aptos-core

./: Cargo.toml
.github/workflows/: lint-test.yaml
api/src/: accounts.rs  context.rs  events.rs  response.rs  runtime.rs  state.rs  transactions.rs  view_function.rs
aptos-node/: Cargo.toml
aptos-node/src/: lib.rs  network.rs  network2.rs  services.rs  state_sync.rs  storage.rs  tests.rs
config/src/: network_id.rs
consensus/: Cargo.toml
consensus/src/: consensus_provider.rs  epoch_manager.rs  lib.rs  logging.rs  network.rs  network_interface.rs  network_tests.rs  payload_manager.rs  round_manager.rs  round_manager_fuzzing.rs  round_manager_test.rs
crates/aptos-in-memory-cache/: Cargo.toml
dkg/: Cargo.toml
dkg/src/: agg_trx_producer.rs  (+4 more)
mempool/: Cargo.toml
network/framework2/: Cargo.toml
network/framework2/src/: builder.rs  counters.rs  error.rs  lib.rs  logging.rs  main.rs  peer.rs  setup.rs
network/framework2/src/application/: error.rs  interface.rs  mod.rs  storage.rs  tests.rs
network/framework2/src/connectivity_manager/: mod.rs  test.rs
network/framework2/src/noise/: fuzzing.rs  handshake.rs  mod.rs  stream.rs
network/framework2/src/protocols/: mod.rs
network/framework2/src/protocols/network/: mod.rs
network/framework2/src/protocols/rpc/: error.rs  mod.rs
network/framework2/src/protocols/stream/: mod.rs
network/framework2/src/protocols/wire/handshake/v1/: mod.rs
network/framework2/src/protocols/wire/messaging/v1/: mod.rs  test.rs
network/framework2/src/transport/: mod.rs  util.rs
testsuite/: find_latest_image.py  forge.py
(+381 files in other folders)
