[package]
name = "aptos-network2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
aptos-bitvec = { workspace = true }
aptos-compression = { workspace = true }
aptos-config = { workspace = true }
aptos-crypto = { workspace = true }
aptos-id-generator = { workspace = true }
aptos-infallible = { workspace = true }
aptos-logger = { workspace = true }
aptos-metrics-core = { workspace = true }
aptos-netcore = { workspace = true }
aptos-num-variants = { workspace = true }
aptos-short-hex-str = { workspace = true }
aptos-time-service = { workspace = true }
aptos-types = { workspace = true }
bcs = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
hex = { workspace = true }
maplit = { workspace = true }
once_cell = { workspace = true }
pin-project = { workspace = true }
rand = { workspace = true, features = ["small_rng"] }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }